--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   <aside class="callout">
   <h3>Preparation time</h3>
   <ul>
-    <li>Total: Approximately 10 minutes</p>
-    <li>Preparation: 5 minutes</p>
-    <li>Cooking: 5 minutes</p>
+    <li><b>Total:</b> Approximately 10 minutes</p>
+    <li><b>Preparation:</b> 5 minutes</p>
+    <li><b>Cooking:</b> 5 minutes</p>
   </ul>
   </aside>
 
