--- a/index.html
+++ b/index.html
@@ -82,22 +82,22 @@
   <hr class="solid">
 
   Carbs
-  0g
+  <p>0g</p>
   <hr class="solid">
 
   Protein
-  20g
+  <p>20g</p>
   <hr class="solid">
 
   Fat
-  22g
-</table>
+  <p>22g</p>
+</div>
 
 </main>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Louis Raymond</a>.
   </div>
 </body>
 </html>
