--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div>
 
-  <aside class="callout">
+  <aside class="callout" >
   <h3>Preparation time</h3>
   <ul>
     <li><b>Total:</b> Approximately 10 minutes</p>
@@ -71,22 +71,27 @@
 
   The table below shows nutritional values per serving without the additional fillings.
 <div style = "margin-top: 40px;">
-
+<div class="table-row">
   Calories
-  277kcal
-  <hr class="solid">
-
-  Carbs
-  <p>0g</p>
-  <hr class="solid">
-
-  Protein
-  <p>20g</p>
-  <hr class="solid">
-
-  Fat
-  <p>22g</p>
+  <p class="nutrition-value">277kcal</p>
 </div>
+  <hr class="solid">
+<div class="table-row">
+  <p>Carbs</p>
+  <p class="nutrition-value">0g</p>
+</div>
+  <hr class="solid">
+<div class="table-row">
+  Protein
+  <p class="nutrition-value">20g</p>
+  </div>
+  <hr class="solid">
+<div class="table-row">
+  Fat
+  <p class="nutrition-value" style="margin-left: auto;">22g</p>
+  </div>
+</div>
+
 </main>
 
   <div class="attribution">
