--- a/index.html
+++ b/index.html
@@ -69,26 +69,28 @@
   <h2>Nutrition</h2>
 
   The table below shows nutritional values per serving without the additional fillings.
-<div style = "margin-top: 40px;">
-<div class="table-row">
-  Calories
-  <p class="nutrition-value">277kcal</p>
-</div>
-  <hr class="solid">
-<div class="table-row">
-  <p>Carbs</p>
-  <p class="nutrition-value">0g</p>
-</div>
-  <hr class="solid">
-<div class="table-row">
-  Protein
-  <p class="nutrition-value">20g</p>
-  </div>
-  <hr class="solid">
-<div class="table-row">
-  Fat
-  <p class="nutrition-value" style="margin-left: auto;">22g</p>
-  </div>
+<section class="nutrition" style="margin-top: 40px;">
+  <table>
+  
+    <tr>
+      <td>Calories</td>
+      <td class="nutrition-value">277kcal</td>
+    </tr>
+    <tr>
+      <td>Carbs</td>
+      <td class="nutrition-value">0g</td>
+    </tr>
+    <tr>
+      <td>Protein</td>
+      <td class="nutrition-value">20g</td>
+    </tr>
+    <tr>
+      <td>Fat</td>
+      <td class="nutrition-value">22g</td>
+    </tr>
+  </table>
+</section>
+</section>
 </div>
 
 </main>
