--- a/index.html
+++ b/index.html
@@ -16,83 +16,83 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap" rel="stylesheet">
 </head>
-<body style="background-color: #F3E5D7;">
-<main style="margin:100px; background-color: white;">
+<body>
+<main>
   <img src="./assets/images/image-omelette.jpeg" alt="Omelette" style="width: 100%; object-fit: fill;">
+  <div class="content">
+    <h1>Simple Omelette Recipe</h1>
+    <p style="margin: 1.5rem 0 2rem 0;">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+    to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
-  <h1>Simple Omelette Recipe</h1>
-  <p style="margin: 1.5rem 0 2rem 0;">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    <div>
 
-  <div>
+    <aside class="callout" >
+    <h3>Preparation time</h3>
+    <ul>
+      <li><b>Total:</b> Approximately 10 minutes</p>
+      <li><b>Preparation:</b> 5 minutes</p>
+      <li><b>Cooking:</b> 5 minutes</p>
+    </ul>
+    </aside>
 
-  <aside class="callout" >
-  <h3>Preparation time</h3>
-  <ul>
-    <li><b>Total:</b> Approximately 10 minutes</p>
-    <li><b>Preparation:</b> 5 minutes</p>
-    <li><b>Cooking:</b> 5 minutes</p>
-  </ul>
-  </aside>
+    </div>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2-3 large eggs</li>
+      <li> Salt, to taste</li>
+      <li> Pepper, to taste</li>
+      <li>1 tablespoon of butter or oil</li>
+      <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+    </ul>
 
+    <hr class="solid">
+
+  <h2>Instructions</h2>
+  <ol>
+    <li> <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+      You can add a tablespoon of water or milk for a fluffier texture.</li>
+    <li>  <b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+
+    <li>
+      <b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+      the eggs evenly coat the surface.</li>
+    <li>  <b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly runny in the 
+      middle, sprinkle your chosen fillings over one half of the omelette.</li>
+    <li>  <b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it over the 
+      fillings. Let it cook for another minute, then slide it onto a plate.</li>
+    <li>  <b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.
+    </li>
+
+  </ol>
+
+    <hr class="solid">
+    <h2>Nutrition</h2>
+
+    The table below shows nutritional values per serving without the additional fillings.
+  <section class="nutrition" style="margin-top: 40px;">
+    <table>
+    
+      <tr>
+        <td>Calories</td>
+        <td class="nutrition-value">277kcal</td>
+      </tr>
+      <tr>
+        <td>Carbs</td>
+        <td class="nutrition-value">0g</td>
+      </tr>
+      <tr>
+        <td>Protein</td>
+        <td class="nutrition-value">20g</td>
+      </tr>
+      <tr>
+        <td>Fat</td>
+        <td class="nutrition-value">22g</td>
+      </tr>
+    </table>
+  </section>
+  </section>
   </div>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>2-3 large eggs</li>
-    <li> Salt, to taste</li>
-    <li> Pepper, to taste</li>
-    <li>1 tablespoon of butter or oil</li>
-    <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-  </ul>
-
-  <hr class="solid">
-
- <h2>Instructions</h2>
- <ol>
-  <li> <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-    You can add a tablespoon of water or milk for a fluffier texture.</li>
-  <li>  <b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
-
-  <li>
-    <b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-    the eggs evenly coat the surface.</li>
-  <li>  <b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly runny in the 
-    middle, sprinkle your chosen fillings over one half of the omelette.</li>
-  <li>  <b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it over the 
-    fillings. Let it cook for another minute, then slide it onto a plate.</li>
-  <li>  <b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.
-  </li>
-
- </ol>
-
-  <hr class="solid">
-  <h2>Nutrition</h2>
-
-  The table below shows nutritional values per serving without the additional fillings.
-<section class="nutrition" style="margin-top: 40px;">
-  <table>
-  
-    <tr>
-      <td>Calories</td>
-      <td class="nutrition-value">277kcal</td>
-    </tr>
-    <tr>
-      <td>Carbs</td>
-      <td class="nutrition-value">0g</td>
-    </tr>
-    <tr>
-      <td>Protein</td>
-      <td class="nutrition-value">20g</td>
-    </tr>
-    <tr>
-      <td>Fat</td>
-      <td class="nutrition-value">22g</td>
-    </tr>
-  </table>
-</section>
-</section>
 </div>
-
 </main>
 
   <div class="attribution">
