fix borders and padding

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </aside>
 
     </div>
+    <section>
     <h2>Ingredients</h2>
     <ul>
       <li>2-3 large eggs</li>
@@ -44,9 +45,8 @@
       <li>1 tablespoon of butter or oil</li>
       <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
     </ul>
-
-    <hr class="solid">
-
+  </section>
+  <section>
   <h2>Instructions</h2>
   <ol>
     <li> <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
@@ -64,12 +64,11 @@
     </li>
 
   </ol>
-
-    <hr class="solid">
+  </section>
     <h2>Nutrition</h2>
 
     The table below shows nutritional values per serving without the additional fillings.
-  <section class="nutrition" style="margin-top: 40px;">
+  <section class="nutrition" style="margin-top: 40px; border-bottom: none;">
     <table>
     
       <tr>
@@ -84,9 +83,9 @@
         <td>Protein</td>
         <td class="nutrition-value">20g</td>
       </tr>
-      <tr>
-        <td>Fat</td>
-        <td class="nutrition-value">22g</td>
+      <tr >
+        <td style="border-bottom: none;">Fat</td>
+        <td class="nutrition-value" style="border-bottom: none;">22g</td>
       </tr>
     </table>
   </section>
