--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <main>
-  <img src="./assets/images/image-omelette.jpeg" alt="Omelette" style="width: 100%; object-fit: fill;">
+  <img src="./assets/images/image-omelette.jpeg" alt="Omelette" >
   <div class="content">
     <h1>Simple Omelette Recipe</h1>
     <p style="margin: 1.5rem 0 2rem 0;">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
@@ -94,9 +94,9 @@
 </div>
 </main>
 
-  <div class="attribution">
+  <section class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Louis Raymond</a>.
-  </div>
+  </section>
 </body>
 </html>
