--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Recipe page</title>
+  <title>Recipe page</title>
   <link rel="stylesheet" href="styles.css">
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,6 +15,13 @@
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap" rel="stylesheet">
+ 
+ <meta property="og:title" content="Recipie Page" />
+ <meta property="og:description" content="This Recipe Page showcases competencies in Semantic HTML, CSS variables, responsive design, custom fonts, and modern layout techniques. It highlights skills in accessibility, maintainable styling, and working from a design to create visually appealing, user-friendly web pages." />
+ <meta property="og:url" content="https://louisraymond.github.io/fem-recipie-page/" />
+ <meta property="og:image" content="https://louisraymond.github.io/fem-recipie-page/design/desktop-design.jpg" /> 
+ <meta property="og:type" content="website" />
+
 </head>
 <body>
 <main>
@@ -96,7 +103,7 @@
 
   <section class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Louis Raymond</a>.
+    Coded by <a href="https://louisraymond.com">Louis Raymond</a>.
   </section>
 </body>
 </html>
